# medisolveai-backend-assignment

./: .gitignore  README.md
assignment_1/admin/: .dmypy.json  Dockerfile  asgi.py  conftest.py  pyproject.toml  test.sh
assignment_1/admin/app/: __init__.py
assignment_1/admin/app/apis/v1/: __init__.py  appointment_router.py  doctor_router.py  hospital_slot_router.py  treatment_router.py
assignment_1/admin/app/core/: __init__.py
assignment_1/admin/app/core/configs/: settings.py
assignment_1/admin/app/core/constants/: __init__.py  appointment_status.py  department.py  error_messages.py  hospital_constants.py
assignment_1/admin/app/core/database/: __init__.py  connection_async.py
assignment_1/admin/app/core/exceptions/: __init__.py  base.py
assignment_1/admin/app/dtos/: __init__.py  frozen_config.py
assignment_1/admin/app/dtos/appointment/: __init__.py  appointment_list_item_response.py  appointment_list_response.py  appointment_statistics_response.py  appointment_status_update_request.py  appointment_summary_data.py
assignment_1/admin/app/dtos/doctor/: __init__.py  doctor_create_request.py  doctor_response.py  doctor_summary_data.py  doctor_update_request.py
assignment_1/admin/app/dtos/hospital_slot/: __init__.py  hospital_slot_create_request.py  hospital_slot_response.py  hospital_slot_summary_data.py  hospital_slot_update_request.py
assignment_1/admin/app/dtos/treatment/: __init__.py  treatment_create_request.py  treatment_response.py  treatment_summary_data.py  treatment_update_request.py
assignment_1/admin/app/models/: __init__.py  appointment.py  doctor.py  hospital_slot.py  patient.py  treatment.py
assignment_1/admin/app/services/: __init__.py  appointment_service.py  doctor_service.py  hospital_slot_service.py  treatment_service.py
assignment_1/admin/app/tests/: __init__.py  fixtures.py  test_admin_app.py  test_client.py
assignment_1/admin/app/tests/apis/: __init__.py
assignment_1/admin/app/tests/apis/appointment/: __init__.py  test_get_appointment_statistics_api.py  test_get_appointments_api.py  test_update_appointment_status_api.py
assignment_1/admin/app/tests/mothers/: __init__.py  appointment_mother.py  doctor_mother.py  hospital_slot_mother.py  treatment_mother.py
assignment_1/admin/app/tests/utils/: __init__.py  db_cleanup.py
assignment_1/gateway/: .dmypy.json  Dockerfile  pyproject.toml
assignment_1/gateway/app/: __init__.py
assignment_1/gateway/app/core/: __init__.py
assignment_1/gateway/app/core/configs/: settings.py
assignment_1/gateway/app/middleware/: cors.py  logging.py
assignment_1/gateway/app/routers/: proxy.py
assignment_1/gateway/app/tests/: __init__.py  conftest.py  test_client.py  test_gateway.py
assignment_2/: README.md  __init__.py  conftest.py  pyproject.toml  random_generator.py
assignment_2/scripts/: plot_distribution.py
assignment_2/tests/: test_random_generator.py
(+70 files in other folders)
