[project]
name = "assignment-2"
version = "0.1.0"
description = "Random generator assignment implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.2",
    "matplotlib>=3.9.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


